# vrc-notify-bot

./: .gitignore  Dockerfile  README.md  config.example.yaml  main.py  pyproject.toml
.github/workflows/: docker-build-push.yml
configs/: configs.py
utils/: cookies.py
